--- a/index.html
+++ b/index.html
@@ -68,15 +68,54 @@
             </div>
             <div class="cards">
                 <h2>Recently Played</h2>
-                <div class="class-container">
+                <div class="cards-container">
                    <div class="card">
                         <img src="./Assets/card1img.jpeg" alt="card" class="card-img">
                         <p class="card-title">Top 50 - Global</p>
-                        <p class="card-info"> Your Daily updates of the most played tracks</p>
+                        <p class="card-info"> Your Daily updates of the most played tracks...</p>
+                   </div>
+                </div>
+
+                <h2>Trending Near By You</h2>
+                <div class="cards-container">
+                   <div class="card">
+                        <img src="./Assets/card2img.jpeg" alt="card" class="card-img">
+                        <p class="card-title">Mahiye Jinna Sonna</p>
+                        <p class="card-info"> Your Daily updates of the most played tracks...</p>
+                   </div>
+                   <div class="card">
+                        <img src="./Assets/card3img.jpeg" alt="card" class="card-img">
+                        <p class="card-title">Mere Pass Ho Tum</p>
+                        <p class="card-info"> Your Daily updates of the most played tracks...</p>
+                   </div>
+                   <div class="card">
+                        <img src="./Assets/card4img.jpeg" alt="card" class="card-img">
+                        <p class="card-title">Thee Thalapathi</p>
+                        <p class="card-info"> Your Daily updates of the most played tracks...</p>
+                   </div>
+                </div>
+                <h2>Featured Charts</h2>
+                <div class="cards-container">
+                   <div class="card">
+                        <img src="./Assets/card5img.jpeg" alt="card" class="card-img">
+                        <p class="card-title">Top Songs Global</p>
+                        <p class="card-info"> Your Daily updates of the most played tracks...</p>
+                   </div>
+                   <div class="card">
+                        <img src="./Assets/card6img.jpeg" alt="card" class="card-img">
+                        <p class="card-title">Top Songs India</p>
+                        <p class="card-info"> Your Daily updates of the most played tracks...</p>
+                   </div>
+                   <div class="card">
+                        <img src="./Assets/card1img.jpeg" alt="card" class="card-img">
+                        <p class="card-title">Top 50 - Global</p>
+                        <p class="card-info"> Your Daily updates of the most played tracks...</p>
                    </div>
                 </div>
             </div>
-
+            <div class="footer">
+                <div class="line"></div>
+            </div>
         </div>
         <div class="music-player">music Player</div>
     </div>
