updated Css file

--- a/index.html
+++ b/index.html
@@ -117,7 +117,31 @@
                 <div class="line"></div>
             </div>
         </div>
-        <div class="music-player">music Player</div>
+        <!-- Music Player -->
+        <div class="music-player">
+           <div class="album">
+                <img src="./Assets/playerimg.png" alt="logo" class="album-img">
+                <span class="album-para">
+                    <p id="album-p1">Daylight</p>
+                    <p id="album-p2">David Kushneer</p>
+                </span>
+                <span class="album-item">
+                    <i class="fa-regular fa-heart album-icon"></i> 
+                    <i class="fa-solid fa-circle-plus album-icon"></i>
+                </span>
+                
+           </div>
+           <div class="player">
+                <div class="player-control">
+                    <img src="./Assets/player_icon1.png" alt="" class="player-control-icon">
+                    <img src="./Assets/player_icon2.png" alt="" class="player-control-icon">
+                    <img src="./Assets/player_icon3.png" alt="" class="player-control-icon">
+                    <img src="./Assets/player_icon4.png" alt="" class="player-control-icon">
+                    <img src="./Assets/player_icon5.png" alt="" class="player-control-icon">
+                </div>
+           </div>
+           <div class="controls"></div>
+        </div>
     </div>
 </body>
 </html>
