--- a/index.html
+++ b/index.html
@@ -135,10 +135,15 @@
                 <div class="player-control">
                     <img src="./Assets/player_icon1.png" alt="" class="player-control-icon">
                     <img src="./Assets/player_icon2.png" alt="" class="player-control-icon">
-                    <img src="./Assets/player_icon3.png" alt="" class="player-control-icon">
+                    <img src="./Assets/player_icon3.png" alt="" class="player-control-icon" style="opacity: 1;height: 2rem;">
                     <img src="./Assets/player_icon4.png" alt="" class="player-control-icon">
                     <img src="./Assets/player_icon5.png" alt="" class="player-control-icon">
                 </div>
+                    <div class="playback-bar">
+                        <span class="curr-time">00:00</span>
+                        <input type="range" min="0" max="100" class="progress-bar" step="">
+                        <span class="tot-time">3:33</span>
+                    </div>
            </div>
            <div class="controls"></div>
         </div>
