--- a/index.html
+++ b/index.html
@@ -55,27 +55,33 @@
         </div>
         <!-- main content -->
         <div class="main-content">
-            <div class="sticky-nav">
-                <div class="sticky-nav-icons">
-                    <img src="./Assets/backward_icon.png" alt="back arrow">
-                    <img src="./Assets/forward_icon.png" alt="forward_icon" class="hide">
+                <div class="sticky-nav">
+                    <div class="sticky-nav-icons">
+                        <img src="./Assets/backward_icon.png" alt="back arrow">
+                        <img src="./Assets/forward_icon.png" alt="forward_icon" class="hide">
+                    </div>
+                    <div class="sticky-nav-option">
+                        <button class="badge nav-item hide">Explore Premium</button>
+                        <button class="badge nav-item dark-badge"><i class="fa-regular fa-circle-down"></i>Install App</button>
+                        <i class="fa-regular fa-user nav-item"></i>
+                    </div>
                 </div>
-                <div class="sticky-nav-option">
-                    <button class="badge nav-item hide">Explore Premium</button>
-                    <button class="badge nav-item dark-badge"><i class="fa-regular fa-circle-down"></i>Install App</button>
-                    <i class="fa-regular fa-user nav-item"></i>
+                <div class="cards">
+                    <h2>Recently Played</h2>
+                    <div class="cards-container">
+                    <div class="card">
+                            <img src="./Assets/card1img.jpeg" alt="card" class="card-img">
+                            <p class="card-title">Top 50 - Global</p>
+                            <p class="card-info"> Your Daily updates of the most played tracks...</p>
+                    </div>
+                    <div class="cards-container">
+                    <div class="card">
+                            <img src="./Assets/playerimg.png" alt="card" class="card-img">
+                            <p class="card-title">Top 50 - Global</p>
+                            <p class="card-info"> Your Daily updates of the most played tracks...</p>
+                    </div>
+                    </div>
                 </div>
-            </div>
-            <div class="cards">
-                <h2>Recently Played</h2>
-                <div class="cards-container">
-                   <div class="card">
-                        <img src="./Assets/card1img.jpeg" alt="card" class="card-img">
-                        <p class="card-title">Top 50 - Global</p>
-                        <p class="card-info"> Your Daily updates of the most played tracks...</p>
-                   </div>
-                </div>
-
                 <h2>Trending Near By You</h2>
                 <div class="cards-container">
                    <div class="card">
@@ -104,6 +110,11 @@
                    <div class="card">
                         <img src="./Assets/card6img.jpeg" alt="card" class="card-img">
                         <p class="card-title">Top Songs India</p>
+                        <p class="card-info"> Your Daily updates of the most played tracks...</p>
+                   </div>
+                   <div class="card">
+                        <img src="./Assets/card7img.jpg" alt="card" class="card-img">
+                        <p class="card-title">Top 50 - Global</p>
                         <p class="card-info"> Your Daily updates of the most played tracks...</p>
                    </div>
                    <div class="card">
@@ -145,7 +156,14 @@
                         <span class="tot-time">3:33</span>
                     </div>
            </div>
-           <div class="controls"></div>
+           <div class="controls">
+             <i class="fa-solid fa-headset"></i>
+             <i class="fa-solid fa-database"></i>
+             <i class="fa-solid fa-computer"></i>
+             <i class="fa-solid fa-volume-high"></i>
+             <input type="range" min="0" max="100" class="mini-progress-bar" step="">
+            <i class="fa-solid fa-expand"></i>
+           </div>
         </div>
     </div>
 </body>
