Completed Cascading Style Sheets

--- a/index.html
+++ b/index.html
@@ -55,33 +55,38 @@
         </div>
         <!-- main content -->
         <div class="main-content">
-                <div class="sticky-nav">
-                    <div class="sticky-nav-icons">
-                        <img src="./Assets/backward_icon.png" alt="back arrow">
-                        <img src="./Assets/forward_icon.png" alt="forward_icon" class="hide">
-                    </div>
-                    <div class="sticky-nav-option">
-                        <button class="badge nav-item hide">Explore Premium</button>
-                        <button class="badge nav-item dark-badge"><i class="fa-regular fa-circle-down"></i>Install App</button>
-                        <i class="fa-regular fa-user nav-item"></i>
-                    </div>
+            <div class="sticky-nav">
+                <div class="sticky-nav-icons">
+                    <img src="./Assets/backward_icon.png" alt="back arrow">
+                    <img src="./Assets/forward_icon.png" alt="forward_icon" class="hide">
                 </div>
-                <div class="cards">
-                    <h2>Recently Played</h2>
-                    <div class="cards-container">
-                    <div class="card">
-                            <img src="./Assets/card1img.jpeg" alt="card" class="card-img">
-                            <p class="card-title">Top 50 - Global</p>
-                            <p class="card-info"> Your Daily updates of the most played tracks...</p>
-                    </div>
-                    <div class="cards-container">
-                    <div class="card">
-                            <img src="./Assets/playerimg.png" alt="card" class="card-img">
-                            <p class="card-title">Top 50 - Global</p>
-                            <p class="card-info"> Your Daily updates of the most played tracks...</p>
-                    </div>
-                    </div>
+                <div class="sticky-nav-option">
+                    <button class="badge nav-item hide">Explore Premium</button>
+                    <button class="badge nav-item dark-badge"><i class="fa-regular fa-circle-down"></i>Install App</button>
+                    <i class="fa-regular fa-user nav-item"></i>
                 </div>
+            </div>
+            <div class="cards">
+                <h2>Recently Played</h2>
+                <div class="cards-container">
+                   <div class="card">
+                        <img src="./Assets/card1img.jpeg" alt="card" class="card-img">
+                        <p class="card-title">Top 50 - Global</p>
+                        <p class="card-info"> Your Daily updates of the most played tracks...</p>
+                   </div>
+                    <div class="card">
+                        <img src="./Assets/card9img.jpg" alt="card" class="card-img">
+                        <p class="card-title">Top 50 - Global</p>
+                        <p class="card-info"> Your Daily updates of the most played tracks...</p>
+                   </div>
+                   <div class="card">
+                        <img src="./Assets/card8img.jpg" alt="card" class="card-img">
+                        <p class="card-title">Top 50 - Global</p>
+                        <p class="card-info"> Your Daily updates of the most played tracks...</p>
+                   </div>
+                  
+                </div>
+
                 <h2>Trending Near By You</h2>
                 <div class="cards-container">
                    <div class="card">
@@ -113,12 +118,17 @@
                         <p class="card-info"> Your Daily updates of the most played tracks...</p>
                    </div>
                    <div class="card">
+                        <img src="./Assets/card1img.jpeg" alt="card" class="card-img">
+                        <p class="card-title">Top 50 - Global</p>
+                        <p class="card-info"> Your Daily updates of the most played tracks...</p>
+                   </div>
+                    <div class="card">
                         <img src="./Assets/card7img.jpg" alt="card" class="card-img">
                         <p class="card-title">Top 50 - Global</p>
                         <p class="card-info"> Your Daily updates of the most played tracks...</p>
                    </div>
                    <div class="card">
-                        <img src="./Assets/card1img.jpeg" alt="card" class="card-img">
+                        <img src="./Assets/card8img.jpg" alt="card" class="card-img">
                         <p class="card-title">Top 50 - Global</p>
                         <p class="card-info"> Your Daily updates of the most played tracks...</p>
                    </div>
@@ -157,12 +167,13 @@
                     </div>
            </div>
            <div class="controls">
-             <i class="fa-solid fa-headset"></i>
-             <i class="fa-solid fa-database"></i>
-             <i class="fa-solid fa-computer"></i>
-             <i class="fa-solid fa-volume-high"></i>
-             <input type="range" min="0" max="100" class="mini-progress-bar" step="">
-            <i class="fa-solid fa-expand"></i>
+                <i class="fa-solid fa-headset"></i>
+                <i class="fa-solid fa-database"></i>
+                <i class="fa-solid fa-computer"></i>
+                <i class="fa-solid fa-volume-high"></i>
+                <input type="range" min="0" max="100" class="mini-progress-bar" step="">
+                <i class="fa-solid fa-expand"></i>
+
            </div>
         </div>
     </div>
